--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link rel="stylesheet" href="" type="text/css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+		<link rel="stylesheet" href="/assets/index-style.css" type="text/css" />
 		<title>MongoScraper</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="app.js"></script>
@@ -12,9 +13,9 @@
 	<body>
   <nav>
     <div class="nav-wrapper #00e676 green accent-3">
-      <a href="#" class="brand-logo right">Fantasy</a>
+      <a href="#" class="brand-logo right"><i class="fas fa-football-ball"></i>Fantasy News</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="/">Home</a></li>
+        <li><a href="/home">Home</a></li>
         <li><a href="/articles/saved">Saved Articles</a></li>
         <li><a class="waves-effect waves-light btn #4fc3f7 light-blue lighten-2" href="/scrape">Scrape New</a></li>
       </ul>
