--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -5,7 +5,7 @@
     <div id="article">
       <div class="row">
       <div class="col s12 m8">
-        {{#each articles}}
+        {{#each savedArticles}}
           <div class="card #546e7a blue-grey darken-1">
             <div class="card-content white-text" data-id="{{this._id}}">
               <span class="card-title">{{this.title}}</span>
