C:/Program Files/Git/articles/saved rendering initialized

--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -14,7 +14,7 @@
             </div>
             <div class="card-action #cfd8dc blue-grey lighten-4">
               <a href="{{this.link}}" target="_blank" style="color: #0091ea">Click here to read more!</a>
-              <button id="saveBtn" class="waves-effect #e57373 red lighten-2 btn">Save Article</button>
+              <button id="noteBtn" class="waves-effect #f4ff81 lime accent-1 btn">Make Note</button>
             </div>
           </div>
         {{/each}}
