--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,10 @@
 <div class="container">
 
-  <div class="wrapper">
-
     <div id="article">
       <div class="row">
       <div class="col s12 m8">
         {{#each articles}}
-          <div class="card #546e7a blue-grey darken-1">
+          <div class="card grow #546e7a blue-grey darken-1">
             <div class="card-content white-text" data-id="{{this._id}}">
               <span class="card-title">{{this.title}}</span>
               <hr>
@@ -21,9 +19,5 @@
       </div>
       </div>
     </div>
-
-    <div id="note"></div>
-
-  </div>
 
 </div>
