--- a/views/layouts/saved-layout.handlebars
+++ b/views/layouts/saved-layout.handlebars
@@ -8,16 +8,14 @@
 		<link rel="stylesheet" href="/assets/index-style.css" type="text/css" />
 		<title>MongoScraper</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/js/app.js"></script>
+		<script src="/js/saved.js"></script>
 	</head>
 	<body>
   <nav>
     <div class="nav-wrapper #00e676 green accent-3">
-      <a class="brand-logo right"><i class="fas fa-football-ball"></i>Fantasy News</a>
+      <a href="#" class="brand-logo center">Saved Articles</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a href="/scrape">Home</a></li>
-        <li><a href="/articles/saved">Saved Articles</a></li>
-        <li><a class="waves-effect waves-light btn #4fc3f7 light-blue lighten-2" href="/scrape">Scrape New</a></li>
       </ul>
     </div>
   </nav>
