save and note update, css, layout bug fix

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,16 @@
       </ul>
     </div>
   </nav>
+
 		{{{ body }}}
+
+	<footer class="page-footer #00e676 green accent-3">
+		<div class="footer-copyright #00e676 green accent-3">
+			<div class="container">
+			© 2018 Fantasy News
+			<a class="grey-text text-lighten-4 right" href="#!">Brendan Burns GitHub</a>
+			</div>
+		</div>
+  </footer>
 	</body>
 </html>
