--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
     <div id="article">
       <div class="row">
-      <div class="col s12 m8">
+      <div class="col s12 m12">
         {{#each articles}}
           <div class="card grow #546e7a blue-grey darken-1">
             <div class="card-content white-text" data-id="{{this._id}}">
@@ -11,7 +11,7 @@
               <p class="summary">{{this.summary}}</p>
             </div>
             <div class="card-action #cfd8dc blue-grey lighten-4">
-              <a href="{{this.link}}" target="_blank" style="color: #0091ea">Click here to read more!</a>
+              <a href="https://www.espn.com{{this.link}}" target="_blank" style="color: #0091ea">Click here to read more!</a>
               <button id="saveBtn" class="waves-effect #e57373 red lighten-2 btn">Save Article</button>
             </div>
           </div>
