--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -4,25 +4,29 @@
 
     <div id="article">
       <div class="row">
-      <div class="col s12 m8">
-        {{#each savedArticles}}
-          <div class="card #546e7a blue-grey darken-1">
-            <div class="card-content white-text" data-id="{{this._id}}">
-              <span class="card-title">{{this.title}}</span>
-              <hr>
-              <p class="summary">{{this.summary}}</p>
+        <div class="col s12 m9 lg9">
+          {{#each savedArticles}}
+            <div class="card #546e7a blue-grey darken-1">
+              <div class="card-content white-text" data-id="{{this._id}}">
+                <span class="card-title">{{this.title}}</span>
+                <hr>
+                <p class="summary">{{this.summary}}</p>
+              </div>
+              <div class="card-action #cfd8dc blue-grey lighten-4">
+                <a href="{{this.link}}" target="_blank" style="color: #0091ea">Click here to read more!</a>
+                <button id="deleteBtn" class="waves-effect #e57373 red lighten-2 btn">Remove</button>
+                <button id="noteBtn" class="waves-effect btn">Make Note</button>
+              </div>
             </div>
-            <div class="card-action #cfd8dc blue-grey lighten-4">
-              <a href="{{this.link}}" target="_blank" style="color: #0091ea">Click here to read more!</a>
-              <button id="noteBtn" class="waves-effect #f4ff81 lime accent-1 btn">Make Note</button>
-            </div>
-          </div>
-        {{/each}}
-      </div>
+          {{/each}}
+        </div>
+        <div class="col s12 m3 lg3">
+          <h4>Notes</h4>
+          <div id="notes"></div>
+        </div>
       </div>
     </div>
 
-    <div id="note"></div>
 
   </div>
 
