saveNote feature added

--- a/views/layouts/saved-layout.handlebars
+++ b/views/layouts/saved-layout.handlebars
@@ -6,7 +6,7 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" href="/assets/saved-style.css" type="text/css"/>
-		<title>MongoScraper</title>
+		<title>Fantasy News</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/js/saved.js"></script>
 	</head>
@@ -19,6 +19,16 @@
       </ul>
     </div>
   </nav>
+
 		{{{ body }}}
+
+	<footer class="page-footer #00e676 green accent-3">
+		<div class="footer-copyright #00e676 green accent-3">
+			<div class="container">
+			© 2018 Fantasy News
+			<a class="grey-text text-lighten-4 right" href="https://github.com/btburns10">Brendan Burns GitHub</a>
+			</div>
+		</div>
+  </footer>
 	</body>
 </html>
