--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<link rel="stylesheet" href="/assets/index-style.css" type="text/css" />
-		<title>MongoScraper</title>
+		<title>Fantasy News</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/js/app.js"></script>
 	</head>
@@ -28,7 +28,7 @@
 		<div class="footer-copyright #00e676 green accent-3">
 			<div class="container">
 			© 2018 Fantasy News
-			<a class="grey-text text-lighten-4 right" href="#!">Brendan Burns GitHub</a>
+			<a class="grey-text text-lighten-4 right" href="https://github.com/btburns10">Brendan Burns GitHub</a>
 			</div>
 		</div>
   </footer>
