saveNote data-id bug fix

--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -15,7 +15,7 @@
               <div class="card-action #cfd8dc blue-grey lighten-4">
                 <a href="{{this.link}}" target="_blank" style="color: #0091ea">Click here to read more!</a>
                 <button id="deleteBtn" class="waves-effect #e57373 red lighten-2 btn">Remove</button>
-                <button id="noteBtn" class="waves-effect btn">Make Note</button>
+                <button id="noteBtn" data-id="{{this._id}}" class="waves-effect btn">Make Note</button>
               </div>
             </div>
           {{/each}}
