home route bug fix

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,9 +15,9 @@
     <div class="nav-wrapper #00e676 green accent-3">
       <a class="brand-logo right"><i class="fas fa-football-ball"></i>Fantasy News</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="/scrape">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/articles/saved">Saved Articles</a></li>
-        <li><a class="waves-effect waves-light btn #4fc3f7 light-blue lighten-2" href="/scrape">Scrape New</a></li>
+        <li><a class="waves-effect waves-light btn #4fc3f7 light-blue lighten-2" href="/">Scrape New</a></li>
       </ul>
     </div>
   </nav>
