--- a/views/layouts/saved-layout.handlebars
+++ b/views/layouts/saved-layout.handlebars
@@ -15,7 +15,7 @@
     <div class="nav-wrapper #00e676 green accent-3">
       <a href="#" class="brand-logo center">Saved Articles</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="/scrape">Home</a></li>
+        <li><a href="/">Home</a></li>
       </ul>
     </div>
   </nav>
